Fix whitespace

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -51,7 +51,6 @@ html, body {
   */
 /* TODO: REFACTOR */
   min-width: 100vw;
-  min-width: -moz-available;          /* WebKit-based browsers will ignore this. */
   min-width: -webkit-fill-available;  /* Mozilla-based browsers will ignore this. */
   min-width: fill-available;          /* https://caniuse.com/?search=fill-available */
 
